scripts/scenario-6/busybox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: fast-track-istio
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: "200m"
          memory: 200Mi
        requests:
          cpu: "100m"
          memory: 100Mi
  restartPolicy: Always
