scripts/scenario-6/independent-se-dr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio
  labels:
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: independent-service-entry
  namespace: fast-track-istio
spec:
  hosts:
    - independent.australiaeast.azurecontainer.io
  location: MESH_EXTERNAL
  ports:
    - number: 8080
      name: http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: independent-dr
  namespace: fast-track-istio
spec:
  host: independent.australiaeast.azurecontainer.io
  trafficPolicy:
     loadBalancer:
       consistentHash:
         httpCookie:
           name: user
           ttl: 0s
